Fix link on index for team page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,33 @@
 					<header>
 						<h2>Reach out to us</h2>
 						<p>We are always eager to expand our partners. Email at [Kinneyspinsemail] for further information or business inquiry.
-						<a href="/html5up-big-picture/meetourteam.html">Meet Our Team</a></p>
+						<a href="meetourteam.html">Meet Our Team</a></p>
+					</header>
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+
+				<!-- Icons -->
+
+				<!-- Menu -->
+					<ul class="menu">
+						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+					</ul>
+
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 					</header>
 			</section>
 
