--- a/meetourteam.html
+++ b/meetourteam.html
@@ -57,7 +57,7 @@
 					<header>
 						<h2></h2>
 						<p>
-						<a href="/html5up-big-picture/meetourteam.html">Go Back Home</a></p>
+						<a href="index.html">Go Back Home</a></p>
 					</header>
 			</section>
 
