--- a/meetourteam.html
+++ b/meetourteam.html
@@ -19,7 +19,7 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>Our Portfolio</h2>
+						<h2>Our Team</h2>
 						<p></p>
 					</header>
 
